--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=cargo-management
+spring.data.mongodb.host=${MONGODB_HOST:localhost}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
+spring.data.mongodb.database=${MONGODB_DATABASE:cargo-db}
+spring.data.mongodb.username=${MONGODB_USERNAME:root}
+spring.data.mongodb.password=${MONGODB_PASSWORD:rootpassword}
+spring.data.mongodb.authentication-database=${MONGODB_AUTH_DATABASE:admin}
+
 cors.frontend-origin=http://localhost:4200
